kube/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api-gateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/rmqnet: "true"
        io.kompose.service: api-gateway
    spec:
      containers:
        - image: raphaelfontys/api-gateway:master
          name: api-gateway
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
